--- a/index.css
+++ b/index.css
@@ -324,6 +324,85 @@ line-height: 120%;
     width: 70%;
 }
 
+/* SECTION 7 */
+.landingpage-section7-gridbox{
+    display: flex;
+    flex-direction: column;
+    row-gap: 1rem;
+    width: 100%;
+}
+.landingpage-section7-gridbox-subbox{
+    display: flex;
+    column-gap: 1rem;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 50%;
+    
+
+}
+.landingpage-section7-gridbox-subbob-sub{
+    display: flex;
+    flex-direction: column;
+    padding: 3%;
+    border-radius: 0.5rem;
+    border: 1px solid #FFF;
+    background: radial-gradient(141.42% 141.42% at 0% 0%, #171717 0%, #101010 100%);
+    display: flex;
+    flex-direction: column;
+    row-gap: 1rem;
+    width: 50%;
+    height: 100%;
+}
+
+
+.landingpage-section7-boxes-heading{
+    color: #C8F962;
+    font-size: 1.75rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 120%; 
+}
+.landingpage-section7-boxes-subheading{
+    color: #A1A0BD;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 200;
+}
+
+/* SECTION 8 */
+.landingpage-section8-gridbox{
+    display: flex;
+    column-gap: 1rem;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+}
+.landingpage-section8-gridbox-box{
+    display: flex;
+    flex-direction: column;
+    row-gap: 1rem;
+    justify-content: center;
+    padding: 3%;
+    border-radius: 0.875rem;
+    border: 1px solid var(--Misty-slate, #292F3B);
+    background: #0C0C0F;
+    align-items: flex-start;
+    height: 100%;
+}
+.landingpage-section8-boxheading{
+    color: #C8F962;
+    font-size: 1.75rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 120%; 
+}
+.landingpage-section8-boxsubheading{
+    color: #A1A0BD;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 200;
+}
 
 
 
