--- a/index2.css
+++ b/index2.css
@@ -46,36 +46,121 @@
     background: radial-gradient(1623.15% 141.42% at 0% 0%, #171717 0%, #101010 41.04%);
 }
 
-/* SECTION2 */
-.page2-section2-gridbox{
-    display: flex;
-    column-gap: 1rem;
-}
-.page2-section2-gridbox-box{
-    padding: 3%;
-    border-radius: 0.5rem;
-    border: 1px solid #FFF;
-    background: radial-gradient(141.42% 141.42% at 0% 0%, #171717 0%, #101010 100%);
+
+
+
+
+/* SECTION 3 */
+#page2-section3{
     display: flex;
     flex-direction: column;
-    height: 21.6875rem;
-    
+    justify-content: center;
+    align-items: center;
+    row-gap: 3rem;
+
 }
-.page2-section2-gridbox-box-heading{
-    color: #D4D3EA;
-    font-size: 1.75rem;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 120%; /* 2.1rem */
+.page2-videocontainer-changes{
+    margin: 0;
 }
-.page2-section2-gridbox-box-subheading{
-    color: #A1A0BD;
-    font-size: 1rem;
-    font-style: normal;
+
+
+/* SECTION 4 */
+
+.page2-section4-flexbox{
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    column-gap: 5rem;
+}
+.page2-section4-flexbox-parts{
+    display: flex;
+    flex-direction: column;
+    row-gap: 1rem;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+
+}
+.page2-section4-heading{
+    color: var(--accent-color);
+    font-size: 4rem;
+    text-align: left;
+    padding: 0;
+}
+.page2-section4-subheading{
+    color: white;
+    text-align: left;
+    font-weight: 400;
+    font-size: 1.5rem;
+}
+
+/* SECTION 5 */
+.page2-section5-flexbox{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    column-gap: 2rem;
+}
+.page2-section5-flexbox-parts{
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    row-gap: 5rem;
+    flex-direction: column;
+    width: 50%;
+}
+.page2-section5-heading{
+    text-align: left;
+    font-size: 3rem;
     font-weight: 500;
-    line-height: 120%; /* 1.2rem */
-    margin-top: auto;
 }
+.page2-section5-flexbox-parts-right-logobox{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    column-gap: 1rem;
+}
+.page2-section5-flexbox-right-logobox-right{
+    display: flex;
+    flex-direction: column;
+    row-gap: 1rem;
+    justify-content: center;
+    align-items: left;
+}
+.page2-section5-logobox-heading{
+    font-size: 1.5rem;
+    font-weight: 400;
+    line-height: 110%;
+    font-style: normal;
+}
+.page2-section5-logobox-subheading{
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 110%;
+    font-style: normal;
+}
+.page2-section5-flexbox-parts-right-textflexbox{
+    display: flex;
+    flex-direction: column;
+    row-gap: 1rem;
+    justify-content: center;
+    align-items: left;
+}
+.page2-section5-textflexbox-heading{
+    color: var(--accent-color);
+    font-size: 2rem;
+    font-weight: 500;
+    line-height: 110%;
+    font-style: normal;
+}
+.page2-section5-textflexbox-subheading{
+    font-size: 1.25rem;
+    font-weight: 400;
+    line-height: 130%;
+    font-style: normal;
+    text-align: left;
+}
+
 @media(max-width:800px){
     /* SECTION1 */
     .page2-section1-contentwrap{
@@ -101,24 +186,7 @@
         font-size: 1.25rem;
         text-align: center;
     }
-    /* SECTION2  */
-    .page2-section2-gridbox{
-        flex-wrap: wrap;
-        row-gap: 1rem;
-        
-    }
-    .page2-section2-gridbox-box{
-        height: auto;
-        margin-top: none;
-        row-gap: 1rem;
-        
-    }
-    .page2-section2-gridbox-box-heading{
-        font-size: 1.5rem;
-    }
-    .page2-section2-gridbox-box-subheading{
-        font-size: 0.75rem;
-    }
+    
 
 }
 @media(max-width:580px){
@@ -132,28 +200,4 @@
        font-size: 1rem;
        text-align: center;
    }
-}
-@media(max-width:500px){
-     
-    /* SECTION2  */
-    
-    .page2-section2-gridbox-box-heading{
-        font-size: 1.3rem;
-    }
-    .page2-section2-gridbox-box-subheading{
-        font-size: 0.65rem;
-    }
-
-}
-@media(max-width:400px){
-     
-    /* SECTION2  */
-    
-    .page2-section2-gridbox-box-heading{
-        font-size: 1.1rem;
-    }
-    .page2-section2-gridbox-box-subheading{
-        font-size: 0.5rem;
-    }
-
 }
