--- a/waste.css
+++ b/waste.css
@@ -283,3 +283,83 @@ line-height: 120%;
 
     
 }
+
+
+
+/* PAGE 2 */
+/* SECTION2 */
+.page2-section2-gridbox{
+    display: flex;
+    column-gap: 1rem;
+}
+.page2-section2-gridbox-box{
+    padding: 3%;
+    border-radius: 0.5rem;
+    border: 1px solid #FFF;
+    background: radial-gradient(141.42% 141.42% at 0% 0%, #171717 0%, #101010 100%);
+    display: flex;
+    flex-direction: column;
+    height: 21.6875rem;
+    
+}
+.page2-section2-gridbox-box-heading{
+    color: #D4D3EA;
+    font-size: 1.75rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 120%; /* 2.1rem */
+}
+.page2-section2-gridbox-box-subheading{
+    color: #A1A0BD;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 120%; /* 1.2rem */
+    margin-top: auto;
+}
+@media(max-width:800px){
+
+    /* SECTION2  */
+    .page2-section2-gridbox{
+        flex-wrap: wrap;
+        row-gap: 1rem;
+        
+    }
+    .page2-section2-gridbox-box{
+        height: auto;
+        margin-top: none;
+        row-gap: 1rem;
+        
+    }
+    .page2-section2-gridbox-box-heading{
+        font-size: 1.5rem;
+    }
+    .page2-section2-gridbox-box-subheading{
+        font-size: 0.75rem;
+    }
+
+}
+@media(max-width:500px){
+     
+    /* SECTION2  */
+    
+    .page2-section2-gridbox-box-heading{
+        font-size: 1.3rem;
+    }
+    .page2-section2-gridbox-box-subheading{
+        font-size: 0.65rem;
+    }
+
+}
+@media(max-width:400px){
+     
+    /* SECTION2  */
+    
+    .page2-section2-gridbox-box-heading{
+        font-size: 1.1rem;
+    }
+    .page2-section2-gridbox-box-subheading{
+        font-size: 0.5rem;
+    }
+
+}
