--- a/index3.css
+++ b/index3.css
@@ -60,3 +60,95 @@
     max-width: 4.5rem;
     width: 100%;
 }
+
+/* SECTION 4 */
+
+.landingpage-section4-wrapper{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    row-gap: 0.75rem;
+}
+.landingpage-section4-gridbox{
+    display: flex;
+    flex-direction: column;
+    /* row-gap: 1rem; */
+}
+.landingpage-section4-gridbox-gridboxparts{
+    display: flex;
+    column-gap: 1.5rem;
+    width: 100%;
+}
+.landingpage-section4-gridbox-gridboxparts-part1div{
+    max-width: 50%;
+    height: auto;
+    
+}
+.landingpage-section4-gridbox-gridboxparts-part2div{
+    max-width: 50%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    row-gap: 1rem;
+    padding-top: 10%;
+}
+.landing-section4-gridbox-headings{
+    font-size: 2.5rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 100%; /* 2.5rem */
+}
+.landingpage-section4-gridbox-subheadings{
+    color:  #D4D3EA;
+    font-size: 1.25rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 130%; /* 1.625rem */
+}
+.landingpage-section4-image{
+    width: 100%;
+    height: 100%;
+}
+.landingpage-section4-gridbox-spanbox{
+    display: flex;
+    /* justify-content: center; */
+    align-items: center;
+    column-gap: 0.25rem;
+}
+@media(max-width:1000px){
+    
+
+    /* SECTION4  */
+    .landing-section4-gridbox-headings{
+    font-size: 1.75rem;
+    }
+    .landingpage-section4-gridbox-subheadings{
+    font-size: 1rem;
+    }
+
+    
+}
+@media(max-width:800px){
+
+ 
+
+    /* SECTION4  */
+    .landing-section4-gridbox-headings{
+    font-size: 1.5rem;
+    }
+    .landingpage-section4-gridbox-subheadings{
+    font-size: 0.75rem;
+    }
+    .landingpage-section4-gridbox-gridboxparts-part1div{
+        max-width: 60%;
+        height: auto;
+        
+    }
+    .landingpage-section4-gridbox-gridboxparts-part2div{
+        max-width: 40%;
+        height: auto;
+        
+    }
+}
