--- a/index2.css
+++ b/index2.css
@@ -24,13 +24,13 @@
     width: 100%;
 }
 .page2-mainheading{
+    color: var(--accent-color);
     font-size: 3rem;
     font-style: normal;
     font-weight: 800;
     line-height: normal;
 }
 .page2-subheading{
-    color: #787878;
     font-size: 1.25rem;
     font-style: normal;
     font-weight: 400;
