--- a/index2.css
+++ b/index2.css
@@ -1,31 +1,33 @@
+h1{
+    margin: 0;
+    padding: 0;
+}
 .page2-section1-contentwrap{
     display: flex;
     justify-content: center;
     align-items: center;
-    column-gap: 1rem;
+    padding: 10% 0;
     width: 100%;
-    padding: 2%;
 }
 .page2-section1-flexbox-part1{
     
     display: flex;
     flex-direction: column;
     row-gap: 1rem;
-    width: 50%;
 }
 .page2-section1-flexbox-part2{
-   width: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
 }
 .page2-mainimage{
-    height: 100%;
+    height: auto;
     width: 100%;
+    object-fit: contain;
 }
 .page2-mainheading{
     color: var(--accent-color);
-    font-size: 3rem;
+    font-size: 4rem;
     font-style: normal;
     font-weight: 600;
     line-height: normal;
@@ -70,15 +72,13 @@
     display: flex;
     justify-content: center;
     align-items: flex-start;
-    column-gap: 5rem;
+    /* column-gap: 5rem; */
 }
 .page2-section4-flexbox-parts{
     display: flex;
     flex-direction: column;
     row-gap: 1rem;
-    justify-content: center;
-    align-items: center;
-    width: 50%;
+    /* width: 50%; */
 
 }
 .page2-section4-heading{
@@ -86,12 +86,20 @@
     font-size: 4rem;
     text-align: left;
     padding: 0;
+    font-weight: 500;
 }
 .page2-section4-subheading{
     color: white;
     text-align: left;
     font-weight: 400;
     font-size: 1.5rem;
+}
+.page2-section4-image{
+    width: 100%;
+    height: auto;
+    object-fit: contain;
+    /* max-width: 250px; */
+
 }
 
 /* SECTION 5 */
@@ -160,7 +168,28 @@
     font-style: normal;
     text-align: left;
 }
+@media(max-width:1250px){
+    .page2-section4-heading{
+        font-size: 2.75rem;
+    }
+    .page2-section4-subheading{
+        font-size: 1.5rem;
+    }
+    
 
+}
+@media(max-width:1100px){
+    /* SECTION1 */
+    
+    .page2-mainheading{
+        font-size: 2.5rem;
+    }
+    .page2-subheading{
+        font-size: 1.05rem;
+    }
+    
+
+}
 @media(max-width:800px){
     /* SECTION1 */
     .page2-section1-contentwrap{
@@ -186,6 +215,20 @@
         font-size: 1.25rem;
         text-align: center;
     }
+    .page2-section4-flexbox{
+        flex-direction: column;
+        row-gap: 1rem;
+        justify-content: center;
+        align-items: center;
+    }
+    .page2-section4-heading{
+        text-align: center;
+        font-size: 2.5rem;
+    }
+    .page2-section4-subheading{
+        text-align: center;
+        font-size: 1.2rem;
+    }
     
 
 }
@@ -200,4 +243,10 @@
        font-size: 1rem;
        text-align: center;
    }
+   .page2-section4-heading{
+    font-size: 2rem;
+}
+.page2-section4-subheading{
+    font-size: 1rem;
+}
 }
